fix: remove word breaks in error locations (#7540)

--- a/packages/reporter/src/errors/errors.scss
+++ b/packages/reporter/src/errors/errors.scss
@@ -204,6 +204,7 @@
       font-size: 13px;
       line-height: 24px;
       padding: 3px 10px;
+      word-break: break-all;
     }
 
     pre {
